--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc --watch"
+    "compile": "tsc --watch",
+    "build": "tsc",
+    "lint": "eslint "
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,21 @@
   },
   "homepage": "https://github.com/LordIllidan/Typescript-szkolenie#readme",
   "dependencies": {
-    "prettier": "2.8.2"
+    "commonjs": "0.0.1",
+    "prettier": "2.8.2",
+    "turborepo": "0.0.1",
+    "zod": "^3.20.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^26.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "turbo": "^1.6.3",
+    "typescript": "^4.9.4"
   }
 }
