--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,19 @@
 {
     "compilerOptions": {
-        "rootDir": "./src",
-        "outDir": "./dist",
-        "strict": true,
-        "allowJs": false,
-        "target": "ES2021",
-        "experimentalDecorators": true
-    }
-}
+      "target": "es6",
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
+      "module": "esnext",
+      "moduleResolution": "node",
+      "lib": ["es2016", "esnext", "dom"],
+      "outDir": "dist/",
+      "rootDir": "./src/",
+      "strict": true,
+      "strictNullChecks": true,
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "declaration": true,
+    },
+    "include": ["src/app.ts"],
+    "exclude": ["dist"]
+  }
