--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc --watch",
     "build": "tsc",
-    "lint": "eslint "
+    "lint": "eslint ",
+    "jest":"jest"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^26.0.0",
@@ -35,6 +37,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "turbo": "^1.6.3",
     "typescript": "^4.9.4"
   }
