--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile": "tsc --watch",
     "build": "tsc",
     "lint": "eslint ",
-    "jest":"jest"
+    "jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/LordIllidan/Typescript-szkolenie#readme",
   "dependencies": {
+    "@reactivex/rxjs": "^6.6.7",
     "commonjs": "0.0.1",
     "prettier": "2.8.2",
     "turborepo": "0.0.1",
